src/test/ui/const-generics/array-impls/core-traits-no-impls-length-33.stderr
error[E0277]: arrays only have std trait implementations for lengths 0..=32
  --> $DIR/core-traits-no-impls-length-33.rs:2:22
   |
LL |     println!("{:?}", [0_usize; 33]);
   |                      ^^^^^^^^^^^^^ the trait `std::array::LengthAtMost32` is not implemented for `[usize; 33]`
   |
   = note: required because of the requirements on the impl of `std::fmt::Debug` for `[usize; 33]`
   = note: required by `std::fmt::Debug::fmt`

error[E0277]: arrays only have std trait implementations for lengths 0..=32
  --> $DIR/core-traits-no-impls-length-33.rs:9:9
   |
LL |     set.insert([0_usize; 33]);
   |         ^^^^^^ the trait `std::array::LengthAtMost32` is not implemented for `[usize; 33]`
   |
   = note: required because of the requirements on the impl of `std::cmp::Eq` for `[usize; 33]`

error[E0369]: binary operation `==` cannot be applied to type `[usize; 33]`
  --> $DIR/core-traits-no-impls-length-33.rs:14:19
   |
LL |     [0_usize; 33] == [1_usize; 33]
   |     ------------- ^^ ------------- [usize; 33]
   |     |
   |     [usize; 33]
   |
   = note: an implementation of `std::cmp::PartialEq` might be missing for `[usize; 33]`

error[E0369]: binary operation `<` cannot be applied to type `[usize; 33]`
  --> $DIR/core-traits-no-impls-length-33.rs:19:19
   |
LL |     [0_usize; 33] < [1_usize; 33]
   |     ------------- ^ ------------- [usize; 33]
   |     |
   |     [usize; 33]
   |
   = note: an implementation of `std::cmp::PartialOrd` might be missing for `[usize; 33]`

error[E0277]: the trait bound `&[usize; 33]: std::iter::IntoIterator` is not satisfied
  --> $DIR/core-traits-no-impls-length-33.rs:24:14
   |
LL |     for _ in &[0_usize; 33] {
   |              ^^^^^^^^^^^^^^ the trait `std::iter::IntoIterator` is not implemented for `&[usize; 33]`
   |
   = help: the following implementations were found:
             <&'a [T; _] as std::iter::IntoIterator>
             <&'a [T] as std::iter::IntoIterator>
             <&'a mut [T; _] as std::iter::IntoIterator>
             <&'a mut [T] as std::iter::IntoIterator>
   = note: required by `std::iter::IntoIterator::into_iter`

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0277, E0369.
For more information about an error, try `rustc --explain E0277`.
